--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <header>
         <h1>Barbearia Alure</h1>
     </header>
+    <img src="img/banner.jpg" alt="imagem-banner">
     <h1>Sobre a Barbearia Alura</h1>
 
     <p>Localizada no coração da cidade a <strong>Barbearia Alura</strong> traz para o mercado o que há de melhor para o
@@ -31,6 +32,7 @@
         <li>Localização</li>
         <li>Profissionais Qualificados</li>
     </ul>
+    <img src="img/beneficios.jpg" alt="imagem-beneficio">
 </body>
 
 </html>
