--- a/index.html
+++ b/index.html
@@ -12,27 +12,34 @@
     <header>
         <h1>Barbearia Alure</h1>
     </header>
-    <img src="img/banner.jpg" alt="imagem-banner">
-    <h1>Sobre a Barbearia Alura</h1>
+    <img id="banner" src="img/banner.jpg" alt="imagem-banner">
+    <div class="principal">
+        <h1>Sobre a Barbearia Alura</h1>
 
-    <p>Localizada no coração da cidade a <strong>Barbearia Alura</strong> traz para o mercado o que há de melhor para o
-        seu cabelo e
-        barba.
-        Fundada em 2019, a Barbearia Alura já é destaque na cidade e conquista novos clientes a cada dia.</p>
+        <p>Localizada no coração da cidade a <strong>Barbearia Alura</strong> traz para o mercado o que há de melhor
+            para o
+            seu cabelo e
+            barba.
+            Fundada em 2019, a Barbearia Alura já é destaque na cidade e conquista novos clientes a cada dia.</p>
 
-    <p><em>Nossa missão é: <strong>"Proporcionar auto-estima e qualidade de vida aos clientes"</strong> </em> .</p>
+        <p id="missao"><em>Nossa missão é: <strong>"Proporcionar auto-estima e qualidade de vida aos clientes"</strong>
+            </em>.</p>
 
-    <p>Oferecemos profissionais experientes e antenados às mudanças no mundo da moda. O atendimento possui padrão de
-        excelência e agilidade, garantindo qualidade e satisfação dos nossos clientes.</p>
+        <p>Oferecemos profissionais experientes e antenados às mudanças no mundo da moda. O atendimento possui padrão de
+            excelência e agilidade, garantindo qualidade e satisfação dos nossos clientes.</p>
+    </div>
 
-    <h2>Benefícios</h2>
-    <ul>
-        <li>Atendimento aos Clintes</li>
-        <li>Espaço diferenciado</li>
-        <li>Localização</li>
-        <li>Profissionais Qualificados</li>
-    </ul>
-    <img src="img/beneficios.jpg" alt="imagem-beneficio">
+    <div class="beneficios">
+        <h2>Benefícios</h2>
+        <ul>
+            <li class="itens">Atendimento aos Clintes</li>
+            <li class="itens">Espaço diferenciado</li>
+            <li class="itens">Localização</li>
+            <li class="itens">Profissionais Qualificados</li>
+        </ul>
+        <img id="beneficio" src="img/beneficios.jpg" alt="imagem-beneficio">
+    </div>
+
 </body>
 
 </html>
