--- a/index.html
+++ b/index.html
@@ -5,16 +5,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/css/style.css">
     <title>Barbearia Alura</title>
 </head>
 
 <body>
     <header>
-        <h1>Barbearia Alure</h1>
+        <h1 class="titulo-principal">Barbearia Alura</h1>
     </header>
     <img id="banner" src="img/banner.jpg" alt="imagem-banner">
     <div class="principal">
-        <h1>Sobre a Barbearia Alura</h1>
+        <h2 class="titulo-centralizado">Sobre a Barbearia Alura</h2>
 
         <p>Localizada no coração da cidade a <strong>Barbearia Alura</strong> traz para o mercado o que há de melhor
             para o
@@ -30,14 +31,14 @@
     </div>
 
     <div class="beneficios">
-        <h2>Benefícios</h2>
+        <h3 class="titulo-centralizado">Benefícios</h3>
         <ul>
             <li class="itens">Atendimento aos Clintes</li>
             <li class="itens">Espaço diferenciado</li>
             <li class="itens">Localização</li>
             <li class="itens">Profissionais Qualificados</li>
         </ul>
-        <img id="beneficio" src="img/beneficios.jpg" alt="imagem-beneficio">
+        <img id="imagembeneficios" src="img/beneficios.jpg" alt="imagem-beneficio">
     </div>
 
 </body>
