--- a/produtos.html
+++ b/produtos.html
@@ -46,6 +46,10 @@
             </li>
         </ul>
     </main>
+    <footer>
+        <img src="img/logo-branco.png" alt="imagem-logo-rodape">
+        <p class="copyright"> &copy; Copyright Barbearia Alura - 2022</p>
+    </footer>
 </body>
 
 </html>
