--- a/contato.html
+++ b/contato.html
@@ -7,10 +7,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/cabecalho.css">
-    <link rel="stylesheet" href="css/produtos.css">
+    
     <link rel="stylesheet" href="css/footer.css">
-    <title>Produtos - Barbearia Alura</title>
+    <title>Contato - Barbearia Alura</title>
 </head>
+
 <body>
     <header>
         <div class="cabecalho">
@@ -25,10 +26,14 @@
         </div>
     </header>
 
+    <main>
+
+    </main>
 
     <footer>
         <img src="img/logo-branco.png" alt="imagem-logo-rodape">
         <p class="copyright"> &copy; Copyright Barbearia Alura - 2022</p>
     </footer>
 </body>
+
 </html>
