--- a/contato.html
+++ b/contato.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/cabecalho.css">
-    
+    <link rel="stylesheet" href="css/contato.css">
     <link rel="stylesheet" href="css/footer.css">
     <title>Contato - Barbearia Alura</title>
 </head>
@@ -27,7 +27,65 @@
     </header>
 
     <main>
+        <form>
+            <label for="name">Nome e Sobrenome</label>
+            <input type="text" name="Nome" id="name" class="input-padrao" required>
 
+            <label for="email">Email</label>
+            <input type="email" name="Email" id="email" placeholder="email@dominio.com" class="input-padrao" required>
+
+            <label for="telefone">Telefone</label>
+            <input type="tel" name="Telefone" id="telefone" placeholder="(XX)XXXX - XXXX" class="input-padrao" required>
+
+            <label for="mensagem">Mensagem</label>
+            <textarea name="textarea" id="mensagem" rows="10px" class="input-padrao" required></textarea>
+            <fieldset>
+                <legend>Como prefere o nosso contato</legend>
+                <label for="radio-email"><input type="radio" name="contato" value="email" id="radio-email">Email</label>
+
+                <label for="radio-telefone"><input type="radio" name="contato" value="telefone"
+                        id="radio-telefone">Telefone</label>
+
+                <label for="radio-whatsapp"><input type="radio" name="contato" value="whatsapp" id="radio-whatsapp"
+                        checked>WhatsApp</label>
+            </fieldset>
+
+            <fieldset>
+                <legend>Qual o horário prefere ser atendido?</legend>
+                <select>
+                    <option>Manhã</option>
+                    <option>Tarde</option>
+                    <option>Noite</option>
+                </select>
+            </fieldset>
+            <label class="checkbox"><input type="checkbox" checked> Gostaria de receber nossas novidades por
+                email?</label>
+
+            <input type="submit" value="Enviar Formulário" class="enviar">
+        </form>
+        <table>
+            <tr>
+                <thead>
+                    <th>Dia</th>
+                    <th>Horário</th>
+                </thead>
+            </tr>
+            <tbody>
+                <tr>
+                    <td>Segunda</td>
+                    <td>8h ~ 20h</td>
+                </tr>
+                <tr>
+                    <td>Quarta</td>
+                    <td>8h ~ 20h</td>
+                </tr>
+                <tr>
+                    <td>Sexta</td>
+                    <td>8h ~ 20h</td>
+                </tr>
+            </tbody>
+
+        </table>
     </main>
 
     <footer>
