--- a/contato.html
+++ b/contato.html
@@ -6,9 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/reset.css">
-    <link rel="stylesheet" href="css/cabecalho.css">
+    <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/contato.css">
-    <link rel="stylesheet" href="css/footer.css">
     <title>Contato - Barbearia Alura</title>
 </head>
 
